<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/purple_200"
    >


    <TableLayout
        android:background="@color/lightgrey"

        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bracketopen"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@color/blacka"
                android:onClick="bopen"
                android:text="@string/bracketopen"
                android:textSize="24sp"
                android:textColor="@color/pink"
                />
            <Button
                android:id="@+id/bracketclose"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@color/blacka"
                android:onClick="bclose"
                android:text="@string/bracketclose"
                android:textColor="@color/pink"
                android:textSize="24sp" />

            <Button
                android:id="@+id/back"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@color/blacka"

                android:onClick="backbtn"
                android:text="@string/back"
                android:textColor="@color/pink"
                android:textSize="24sp" />

            <Button
                android:id="@+id/clear"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@color/blacka"
                android:onClick="clearbtn"
                android:textColor="@color/pink"
                android:text="@string/clear"

                android:textSize="24sp" />

            <Button
                android:id="@+id/add"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@color/blacka"
                android:onClick="addbtn"
                android:text="@string/add"
                android:textColor="@color/pink"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/seven"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:onClick="sevenbtn"
                android:text="@string/seven"
                android:textSize="24sp" />

            <Button
                android:id="@+id/eight"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="99dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="eightbtn"
                android:text="@string/eight"
                android:textSize="24sp" />

            <Button
                android:id="@+id/nine"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:onClick="ninebtn"
                android:text="@string/nine"
                android:textSize="24sp" />

            <Button
                android:id="@+id/sub"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@color/blacka"

                android:onClick="sunbtn"
                android:text="@string/sub"
                android:textColor="@color/pink"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/four"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:onClick="fourbtn"
                android:text="@string/four"
                android:textSize="24sp" />

            <Button
                android:id="@+id/five"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:onClick="fivebtn"
                android:text="@string/five"
                android:textSize="24sp" />

            <Button
                android:id="@+id/six"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:onClick="sixbtn"
                android:text="@string/six"
                android:textSize="24sp" />

            <Button
                android:id="@+id/mul"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@color/blacka"
                android:onClick="mulbtn"
                android:text="*"
                android:textColor="@color/pink"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/one"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:onClick="onebtn"
                android:text="@string/one"
                android:textSize="24sp" />

            <Button
                android:id="@+id/two"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:onClick="twobtn"
                android:text="@string/two"
                android:textSize="24sp" />

            <Button
                android:id="@+id/three"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:onClick="threebtn"
                android:text="@string/three"
                android:textSize="24sp" />

            <Button
                android:id="@+id/div"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@color/blacka"

                android:onClick="divbtn"
                android:text="@string/div"
                android:textColor="@color/pink"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/dec"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:onClick="decbtn"
                android:text="@string/dec"
                android:textSize="24sp" />

            <Button
                android:id="@+id/zero"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:onClick="zerobtn"
                android:text="@string/zero"
                android:textSize="24sp"
                />

            <Button
                android:id="@+id/equal"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:onClick="equlalbtn"
                android:text="@string/equal"
                android:textSize="30sp"
                android:textColor="@color/green"

                />

            <Button
                android:id="@+id/button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:onClick="percentbtn"
                android:text="@string/percent"
                android:textSize="24sp"
                android:background="@color/blacka"

                android:textColor="@color/pink"
                />


        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/input"
        android:layout_width="0dp"
        android:layout_height="158dp"
        android:layout_marginTop="4dp"
        android:autofillHints="false"
        android:hint="Enter Input  "
        android:inputType="none"
        android:text=""
        android:textAlignment="viewEnd"
        android:textColor="@color/White"
        android:textColorHint="#858484"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.82" />
</androidx.constraintlayout.widget.ConstraintLayout>